Étape 2 : ajout du bloc header avec photo et informations personnelles

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -10,6 +10,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div id="wrapper"></div>
+  <div id="wrapper">
+
+    <header>
+      <h1>Ahmed AL KHALIDI</h1>
+      <h2>Développeur Web Senior</h2>
+      <img src="images/photo_cv.jpeg" alt="Photo de profil fictive">
+      <section id="infos">
+        <h3>Informations personnelles</h3>
+        <ul>
+          <li><strong>Nom :</strong> Al Khalidi</li>
+          <li><strong>Prénom :</strong> Ahmed</li>
+          <li><strong>Adresse :</strong> 123 Rue des Jasmins, Rabat, Maroc</li>
+          <li><strong>Date de naissance :</strong> 12 mars 1945 (80 ans)</li>
+          <li><strong>Email :</strong> <a href="mailto:ahmed.khalidi@example.com">ahmed.khalidi@example.com</a></li>
+          <li><strong>Nationalité :</strong> Marocaine</li>
+        </ul>
+      </section>
+    </header>
+
+  </div>
 </body>
 </html>
