--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -28,7 +28,79 @@
         </ul>
       </section>
     </header>
+   <section id="presentation">
+      <h2>Présentation</h2>
+      <p>Développeur web expérimenté, passionné par la conception d’interfaces modernes et performantes. 
+      Mon parcours m’a permis de travailler sur des projets variés, alliant rigueur technique et créativité. 
+      Je cherche à transmettre mon expérience tout en continuant à apprendre les nouvelles technologies du web.</p>
+    </section>
 
+    <section id="experiences">
+      <h2>Expériences professionnelles</h2>
+
+      <article>
+        <h3>Lead Developer – WebTech Solutions (2018–2024)</h3>
+        <p>Encadrement d’une équipe de 6 développeurs pour la refonte du site e-commerce de l’entreprise. 
+        Mise en place d’une architecture moderne basée sur React et Node.js.</p>
+      </article>
+
+      <article>
+        <h3>Développeur Front-End – DigitalWave (2014–2018)</h3>
+        <p>Développement d’interfaces responsives et intégration de maquettes UX. 
+        Collaboration avec les équipes design et marketing sur plusieurs projets clients.</p>
+      </article>
+
+      <article>
+        <h3>Consultant Web Freelance (2008–2014)</h3>
+        <p>Création de sites vitrines et blogs personnalisés pour PME et indépendants. 
+        Accompagnement technique et maintenance continue.</p>
+      </article>
+    </section>
+
+    <section id="competences">
+      <h2>Compétences</h2>
+      <dl>
+        <dt>Langages</dt>
+        <dd>HTML5, CSS3, JavaScript, PHP, Python</dd>
+
+        <dt>Frameworks</dt>
+        <dd>React, Bootstrap, Django</dd>
+
+        <dt>Outils</dt>
+        <dd>Git, VS Code, Linux</dd>
+
+        <dt>Bases de données</dt>
+        <dd>MySQL, PostgreSQL</dd>
+      </dl>
+    </section>
+
+    <section id="formation">
+      <h2>Formation</h2>
+      <ul>
+        <li>Master en Informatique – Université de Rabat (2005–2007)</li>
+        <li>Licence en Développement Web – ENSA Agadir (2002–2005)</li>
+      </ul>
+    </section>
+
+    <section id="langues">
+      <h2>Langues</h2>
+      <ul>
+        <li>Arabe : Langue maternelle</li>
+        <li>Français : C1</li>
+        <li>Anglais : Avancé</li>
+      </ul>
+    </section>
+
+    <section id="hobbies">
+      <h2>Centres d’intérêt</h2>
+      <ul>
+        <li>Lecture sur l’intelligence artificielle</li>
+        <li>Photographie urbaine</li>
+        <li>Randonnées et voyages culturels</li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
+
+
