Étape 4 : ajout du footer avec liens professionnels et informations générales

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -99,6 +99,18 @@
         <li>Randonnées et voyages culturels</li>
       </ul>
     </section>
+    <footer>
+  <h2>Liens et contacts</h2>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/ahmed-alkhalidi" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/ahmed-alkhalidi" target="_blank">GitHub</a></li>
+    <li><a href="https://twitter.com/ahmed-alkhalidi" target="_blank">Twitter</a></li>
+    <li><a href="https://www.flickr.com/photos/ahmed-alkhalidi" target="_blank">Flickr</a></li>
+  </ul>
+
+  <p>© 2025 Ahmed AL KHALIDI — CV personnel réalisé en HTML / CSS.</p>
+</footer>
+
   </div>
 </body>
 </html>
