--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="web, developer, resume">
   <meta name="author" content="Mon nom">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/resume.css">
+
 </head>
 <body>
   <div id="wrapper">
