Partie 2 : ajout des icônes Font Awesome dans le footer

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -9,6 +9,8 @@
   <meta name="author" content="Mon nom">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/resume.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -101,13 +103,13 @@
         <li>Randonnées et voyages culturels</li>
       </ul>
     </section>
-    <footer>
+ <footer>
   <h2>Liens et contacts</h2>
   <ul>
-    <li><a href="https://www.linkedin.com/in/ahmed-alkhalidi" target="_blank">LinkedIn</a></li>
-    <li><a href="https://github.com/ahmed-alkhalidi" target="_blank">GitHub</a></li>
-    <li><a href="https://twitter.com/ahmed-alkhalidi" target="_blank">Twitter</a></li>
-    <li><a href="https://www.flickr.com/photos/ahmed-alkhalidi" target="_blank">Flickr</a></li>
+    <li><a href="https://www.linkedin.com/in/ahmed-alkhalidi" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+    <li><a href="https://github.com/ahmed-alkhalidi" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
+    <li><a href="https://twitter.com/ahmed-alkhalidi" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+    <li><a href="https://www.flickr.com/photos/ahmed-alkhalidi" target="_blank"><i class="fa fa-flickr"></i> Flickr</a></li>
   </ul>
 
   <p>© 2025 Ahmed AL KHALIDI — CV personnel réalisé en HTML / CSS.</p>
