--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/resume.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <script src="https://use.edgefonts.net/source-sans-pro.js"></script>
 
 
 </head>
