--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -121,3 +121,33 @@
 </html>
 
 
+## Étape 3 – Mise en ligne du CV
+
+###  Objectif
+Mettre le CV HTML/CSS en ligne afin qu’il soit accessible publiquement sur Internet.  
+Deux solutions ont été testées : **GitLab Pages** (hébergement universitaire) et **GitHub Pages** (solution alternative).
+
+---
+
+###  Partie 1 : Tentative avec GitLab Pages
+
+#### Objectif
+Utiliser le système d’intégration continue (CI/CD) de GitLab pour publier automatiquement le contenu du CV à chaque *commit* sur la branche `main`.
+
+#### Fichier `.gitlab-ci.yml`
+
+```yaml
+image: alpine:latest
+
+pages:
+  stage: deploy
+  script:
+    - apk add --no-cache bash
+    - mkdir -p public
+    - cp -r ./ubo-resume.html ./public/index.html
+    - cp -r ./css ./images ./README.md ./public/ || true
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
