Ajout de l’apparition des descriptions détaillées (tooltips sur les compétences)

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -102,22 +102,38 @@
 
     <section id="competences">
       <h2>Compétences</h2>
-          <dl>
-            <dt>Langages</dt>
-            <dd><span itemprop="knowsAbout">HTML5</span>, <span itemprop="knowsAbout">CSS3</span>,
-                <span itemprop="knowsAbout">JavaScript</span>, <span itemprop="knowsAbout">PHP</span>, <span itemprop="knowsAbout">Python</span></dd>
+      <dl>
+        <dt>Langages</dt>
+        <dd>
+          <span class="skill" data-description="Langage de structure des pages web.">HTML5</span>,
+          <span class="skill" data-description="Langage de style pour la mise en forme.">CSS3</span>,
+          <span class="skill" data-description="Langage de programmation du web dynamique.">JavaScript</span>,
+          <span class="skill" data-description="Langage serveur utilisé pour les sites dynamiques.">PHP</span>,
+          <span class="skill" data-description="Langage polyvalent pour le développement backend et IA.">Python</span>
+        </dd>
 
-            <dt>Frameworks</dt>
-            <dd><span itemprop="knowsAbout">React</span>, <span itemprop="knowsAbout">Bootstrap</span>, <span itemprop="knowsAbout">Django</span></dd>
+        <dt>Frameworks</dt>
+        <dd>
+          <span class="skill" data-description="Bibliothèque JS pour interfaces réactives.">React</span>,
+          <span class="skill" data-description="Framework CSS pour design rapide.">Bootstrap</span>,
+          <span class="skill" data-description="Framework Python pour applications web.">Django</span>
+        </dd>
 
-            <dt>Outils</dt>
-            <dd><span itemprop="knowsAbout">Git</span>, <span itemprop="knowsAbout">VS Code</span>, <span itemprop="knowsAbout">Linux</span></dd>
+        <dt>Outils</dt>
+        <dd>
+          <span class="skill" data-description="Système de versionnement de code.">Git</span>,
+          <span class="skill" data-description="Éditeur de code moderne et extensible.">VS Code</span>,
+          <span class="skill" data-description="Système d’exploitation open source pour le développement.">Linux</span>
+        </dd>
 
-            <dt>Bases de données</dt>
-            <dd><span itemprop="knowsAbout">MySQL</span>, <span itemprop="knowsAbout">PostgreSQL</span></dd>
-          </dl>
-
+        <dt>Bases de données</dt>
+        <dd>
+          <span class="skill" data-description="Système de gestion de bases relationnelles.">MySQL</span>,
+          <span class="skill" data-description="Base de données orientée objet et open source.">PostgreSQL</span>
+        </dd>
+      </dl>
     </section>
+
 
     <section id="formation">
       <h2>Formation</h2>
