Ajout de l'auto-évaluation des compétences (affichage étoiles et histogramme depuis JSON)

--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -133,7 +133,13 @@
         </dd>
       </dl>
     </section>
+    <section id="auto-evaluation">
+  <h2>Auto-évaluation des connaissances</h2>
+  <div id="liste-competences"></div>
 
+  <!-- Zone pour le graphique -->
+  <canvas id="graphiqueCompetences" width="600" height="300"></canvas>
+    </section>
 
     <section id="formation">
       <h2>Formation</h2>
@@ -185,6 +191,7 @@
   </div>
 
 <script src="js/app.js"></script>
+<script src="js/auto-eval.js"></script>
 </body>
 </html>
 
