Fix script paths for GitHub Pages using base href

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <base href="https://medbenaissa1.github.io/BENAISSA-MOHAMMED-TP-CLIENT-WEB/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Mon CV</title>
   <meta name="description" content="A propos de moi.">
