--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <base href="https://medbenaissa1.github.io/BENAISSA-MOHAMMED-TP-CLIENT-WEB/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Mon CV</title>
   <meta name="description" content="A propos de moi.">
   <meta name="keywords" content="web, developer, resume">
   <meta name="author" content="Mon nom">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/resume.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://use.edgefonts.net/source-sans-pro.js"></script>
-  <link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="./css/resume.css">
+<link rel="stylesheet" href="./css/responsive.css">
 
 
 </head>
@@ -191,8 +190,9 @@
 
   </div>
 
-<script src="js/app.js"></script>
-<script src="js/auto-eval.js"></script>
+<script src="./js/app.js?v=3"></script>
+<script src="./js/auto-eval.js?v=3"></script>
+
 </body>
 </html>
 
